--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 click==6.6
 Flask==0.11.1
+Flask-SQLAlchemy==2.1
+httplib2==0.9.2
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
-Werkzeug==0.11.10
+psycopg2==2.6.1
+pytz==2016.4
+six==1.10.0
+SQLAlchemy==1.0.13
 twilio==4.4.0
+Werkzeug==0.11.10
